feat: org detail endpoint
